--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -10,14 +10,14 @@
 
     <!--顶部-->
     <RelativeLayout
-        android:id="@+id/hp_ll_top"
+        android:id="@+id/circle_ll_top"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="10dp"
         android:background="#ffffff"
         android:elevation="5dp">
-        <com.example.learningmachineparentsapp.View.RoundImageView
-            android:id="@+id/hp_riv_icon"
+        <ImageView
+            android:id="@+id/circle_iv_icon"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:src="@mipmap/added"
