--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -12,8 +12,8 @@
         android:layout_marginBottom="5dp">
         <com.example.learningmachineparentsapp.View.RoundImageView
             android:id="@+id/item_videocom_userLogo"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@mipmap/icon"
             android:layout_marginLeft="16dp"/>
         <LinearLayout
@@ -27,18 +27,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#FF5722"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:text="沐风" />
             <TextView
                 android:id="@+id/item_videocom_story"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="水光潋滟晴方好，山色空蒙雨亦奇。\n欲把西湖比西子，淡抹浓妆总相宜。"
-                android:maxLines="10"
+                android:maxLines="4"
                 android:ellipsize="end"
-                android:layout_marginRight="10dp"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 android:textColor="#6e6e6e"/>
             <TextView
                 android:id="@+id/item_videocom_time"
@@ -57,13 +56,14 @@
             android:gravity="center_horizontal">
             <ImageView
                 android:id="@+id/item_videocom_iv_like"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:src="@mipmap/love"/>
             <TextView
                 android:id="@+id/item_videocom_tv_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="12sp"
                 android:text="66"/>
         </LinearLayout>
     </LinearLayout>
