小调上传布局

--- a/app/src/main/res/layout/activity_gsyvideo.xml
+++ b/app/src/main/res/layout/activity_gsyvideo.xml
@@ -33,4 +33,10 @@
             android:text="上传"/>
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/gsy_iv_back"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="12.5dp"
+        android:layout_marginLeft="10dp"/>
 </RelativeLayout>
