--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginBottom="10dp">
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/tit_rl"
@@ -29,5 +28,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#D7D7D7"/>
+        android:background="#D7D7D7"
+        android:layout_marginBottom="10dp"/>
 </LinearLayout>
